--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,4 +25,5 @@
 /* feed page */
 .airportFeedForm {
   margin-top: 2.5%;
+  margin-left: 1.5%;
 }
